# face_mask_detection_system

./: .gitignore  .gitmessage  LICENSE  README.md  requirements-jetson.txt  requirements.txt
artificial_dataset_creation/advanced_artificial_facemask_overlay/: README.md  main.py
artificial_dataset_creation/advanced_artificial_facemask_overlay/mask/: 1.csv  2.csv  3.csv  4.csv  5.csv
artificial_dataset_creation/artificial_facemask_script/: README.md  main.py  mask-sources.txt
artificial_dataset_creation/duplicate_image_detector/: README.md  duplicate_remover.py  libpng_fix.bat
documentation/DOC format/: Advanced artificial facemask overlay.docx  Dataset creation & model training.docx  High level description.docx  Installation guide.docx  Thermal camera calibration guide.docx
mask_detection/: README.md  calibrator.py  detector.py  learning_algo.py
mask_detection/thermal_grabber/: CMakeLists.txt  README.md
mask_detection/thermal_grabber/grabber_lib/Lepton_SDK/include/: LEPTON_I2C_Protocol.h  LEPTON_I2C_Service.h  LEPTON_SDK.h  LEPTON_VID.h
mask_detection/thermal_grabber/grabber_lib/Lepton_SDK/src/: LEPTON_AGC.c  LEPTON_I2C_Protocol.c  LEPTON_I2C_Service.c  LEPTON_OEM.c  LEPTON_RAD.c  LEPTON_SDK.c  LEPTON_SYS.c  LEPTON_VID.c
mask_detection/thermal_grabber/thermal_grabber/: CMakeLists.txt  thermal_grabber.cpp
